Viewer Mode Fixed
Corrected what changing the screen look messed up. A person is now able
to view both players as they draw, it shows their names above their
deck, and a viewer disconnecting while people are playing no longer
causes the room to close for everyone. Need to now work on what happens
when a room is closed, it appears that trying to continue doing stuff
after a room is closed on you causes issues.

--- a/public/css/playing-screen.css
+++ b/public/css/playing-screen.css
@@ -68,7 +68,7 @@
     border-width: 2px;
 }
 
-#player-large-card {
+.large-card {
     width: 75%;
     margin: 2% auto;
 }
